hphp/test/zend/bad/ext/session/tests/rfc1867_invalid_settings_2.php
<?php
var_dump(ini_get("session.upload_progress.freq"));
?>